--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,6 +14,9 @@ group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
 
+lovelace:
+  mode: yaml
+
 hacs:
   token: !secret hacs_token
 
