--- a/secrets.yaml
+++ b/secrets.yaml
@@ -1,4 +1,7 @@
 
 # Use this file to store secrets like usernames and passwords.
 # Learn more at https://home-assistant.io/docs/configuration/secrets/
-some_password: welcome
+router_ip: 192.168.0.1
+router_username: cusadmin
+router_password: Mikeis1337
+hacs_token: 10acc63b29ca63894822d829bd4079ad4fc66386
